# tw-updater-plasmoid

./: CMakeLists.txt  README.md  com.contezero.zypper-dup-wrapper.policy  zypper-dup-wrapper
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CheckDelegate.qml  Compact.qml  ConfigGeneral.qml  Full.qml  InstallDelegate.qml  PromptDelegate.qml  main.qml
plugin/: CMakeLists.txt  qmldir  twupdaterplugin.cpp  twupdaterplugin.h  updaterBackend.cpp  updaterBackend.h  zypperWrapper.cpp  zypperWrapper.h
